Mise à jour des tests et corrections (controllers, services, repositories, CI, application.yml)